reworked logic of backups; fixed display bugs with backups; started to add 'visibleLimitLevel strikethrough mode, but not looking promising...

--- a/geptChecker/WiP/main.css
+++ b/geptChecker/WiP/main.css
@@ -603,7 +603,8 @@
     }
 
     .awl-word {
-      border-bottom: 1px dotted;
+      /* border-bottom: 1px dotted; */
+      text-decoration: underline dotted;
     }
 
     .instructions {
@@ -658,6 +659,36 @@
     #selectKids {
       color: #c1502e;
     }
+
+    #backup-dlg {
+      /* display: flex; */
+      display: none;
+      flex-direction: column;
+    }
+
+    #backup-dlg > div {
+      /* background-color: #409bcf; */
+      flex-grow: 0;
+      /* display: flex;
+      flex-direction: row; */
+    }
+
+    #backup-dlg > div:nth-child(2) {
+      /* background-color: #fffd8e; */
+      flex-grow: 1;
+      display: flex;
+      flex-direction: row;
+      align-items: stretch;
+    }
+
+    #backup-dlg > div > button {
+      /* background-color: #ff6f3f;
+      border: #555 solid 1px; */
+      white-space: normal;
+      margin: 3px;
+      /* flex-grow: 1; */
+    }
+
 
     /* ## FOR PLACEHOLDER TEXT #################################### */
 
